# ChangeLog for dev-lang/tcl
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.39 2004/09/06 18:49:51 ciaranm Exp $

  06 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> tcl-8.3.4.ebuild,
  tcl-8.4.6.ebuild:
  Switch to use epause and ebeep, bug #62950

  24 Aug 2004; Chris Aniszczyk <zx@gentoo.org> tcl-8.4.6.ebuild:
  Stable on x86

  17 Aug 2004; Aron Griffis <agriffis@gentoo.org> tcl-8.4.6.ebuild:
  stable on alpha and ia64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> tcl-8.3.4.ebuild,
  tcl-8.4.6.ebuild:
  virtual/glibc -> virtual/libc

  15 Jun 2004; Ferris McCormick <fmccor@gentoo.org> tcl-8.4.6.ebuild:
  Marked stable for sparc.

  31 May 2004; Tom Gall <tgall@genoo.orgr>  tcl-8.4.6.ebuild:
  stable on ppc64

  25 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> tcl-8.3.4.ebuild,
  tcl-8.4.6.ebuild:
  don't depend on use echo

  25 Apr 2004; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  tcl-8.4.6.ebuild:
  Removed gentoolkit thanks to Brian Jackson <iggy@gentoo.org> in bug #43626

  20 Apr 2004; Ian Leitch <port001@gentoo.org> tcl-8.4.6.ebuild:
  Marking stable on amd64 and s390

  20 Apr 2004; Ian Leitch <port001@gentoo.org> tcl-8.4.6.ebuild:
  Marking stable on mips

  20 Apr 2004; Ian Leitch <port001@gentoo.org> tcl-8.3.4.ebuild,
  tcl-8.4.6.ebuild:
  Enable threads with local USE flag 'threads'. #2024

  20 Apr 2004; Ian Leitch <port001@gentoo.org> -tcl-8.3.3-r1.ebuild,
  -tcl-8.3.3-r3.ebuild, -tcl-8.4.3.ebuild, -tcl-8.4.4.ebuild,
  -tcl-8.4.5.ebuild:
  Removed stable ebuilds

*tcl-8.4.6 (04 Mar 2004)

  04 Mar 2004; Martin Holzer <mholzer@gentoo.org> tcl-8.4.6.ebuild:
  Version bumped.

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> tcl-8.4.5.ebuild:
  added s390 to keywords

  04 Jan 2004; <tuxus@gentoo.org> tcl-8.4.3.ebuild:
  Added mips to KEYWORDS

  03 Jan 2004; Aron Griffis <agriffis@gentoo.org> tcl-8.4.5.ebuild:
  Add ~alpha
