@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tk
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.44 2004/09/09 18:23:25 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tk/ChangeLog,v 1.45 2004/09/14 20:38:20 gmsoft Exp $
+
+  14 Sep 2004; Guy Martin <gmsoft@gentoo.org> tk-8.4.6-r1.ebuild:
+  Stable on hppa.
 
   09 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> tk-8.4.6-r1.ebuild:
   Keyworded sparc
