@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/tcl
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.39 2004/09/06 18:49:51 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/tcl/ChangeLog,v 1.40 2004/09/14 20:33:33 gmsoft Exp $
+
+  14 Sep 2004; Guy Martin <gmsoft@gentoo.org> tcl-8.4.6.ebuild:
+  Stable on hppa.
 
   06 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org> tcl-8.3.4.ebuild,
   tcl-8.4.6.ebuild:
